apps/base/echo-server/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: echo
  name: echo
